# zero2prod_axum

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile_alpine  _build.rs  build  configuration.yaml  docker-compose.yaml  production.yaml  rolling_update
assets/: root.crt
configuration/: local.yaml  production.yaml
db/: Dockerfile  ssl-conf.sh
diagrams/PostgreSQL connection pool under hood/: PostgreSQL connection pool under hood.excalidraw
html/: home.html  login.html
migrations/: V10__make_users_password_column_wider.sql  V5__add_on_delete_cascade_to_subscription_tokens_table.sql  V6__create_users_table.sql
queries/: newsletters.sql  subscriptions.sql
rest_client/: result  run
scripts/: init_db.sh  init_pgadmin.sh
src/: authentication.rs  configuration.rs  connection_pool.rs  cornucopia.rs  email_client.rs  html_template_gen.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: mod.rs
src/routes/login/: get.rs  post.rs
src/startup/: db_migration.rs
src/validation/: mod.rs  subscriber_token.rs
templates/: email_verification.html
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
