[package]
name = "zero2prod_axum"
version = "0.1.0"
edition = "2021"

[lib]
name = "zero2prod_axum"
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
postgres-types = { version = "0.2.6", features = ["derive"] }
cornucopia_async = "0.4.0"
futures = "0.3.29"
time = "0.3.30"
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1", "with-time-0_3"] }
deadpool = "0.10.0"
deadpool-postgres = "0.11.0"
# postgres-native-tls = "0.5.0"
axum = { version = "0.7.1", features = ["macros"] }
hyper = "1.0.1"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
config = "0.13.4"
refinery = { version = "0.8.11", features = ["tokio-postgres"] }
uuid = { version = "1.6.1", features = ["v4"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
secrecy = { version = "0.8.0", features = ["serde"] }
validator = "0.16.1"
reqwest = { version = "0.11.22", default-features = false, features = [
    "json",
    "rustls-tls",
    "multipart"
] }
linkify = "0.10.0"
rand = { version = "0.8.5", features = ["std_rng"] }

# Dev dependencies are used exclusively when running test or examples
# They do not get included in the final application binary!
[dev-dependencies]
wiremock = "0.5.21"
fake = "2.9.1"
