[package]
name = "zero2prod_axum"
version = "0.1.0"
edition = "2021"

[lib]
name = "zero2prod_axum"
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

# [[bin]]
# name = "test_feature"
# path = "src/bin/test_feature.rs"

[dependencies]
# Database-related dependencies
postgres-types = { version = "0.2.6", features = ["derive"] }
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1", "with-time-0_3"] }
deadpool = "0.10.0"
deadpool-postgres = "0.11.0"
postgres-native-tls = "0.5.0"
native-tls = "0.2.11"
refinery = { version = "0.8.11", features = ["tokio-postgres"] }
cornucopia_async = { path = "../../crates/open-source/backend/cornucopia/crates/client_async" }

# Web-related dependencies
axum = { version = "0.7.2", features = ["macros"] }
http = "1.0.0"
hyper = "1.0.1"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "signal"] }
reqwest = { version = "0.11.22", default-features = false, features = ["json", "rustls-tls", "multipart"] }

# Serialization-related dependencies
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# Utility and miscellaneous dependencies
futures = "0.3.29"
config = "0.13.4"
uuid = { version = "1.6.1", features = ["v4"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono", "registry", "env-filter"] }
secrecy = { version = "0.8.0", features = ["serde"] }
validator = "0.16.1"
linkify = "0.10.0"
askama = "0.12.1"
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.50"
anyhow = "1.0.75"
base64 = "0.21.5"
sha3 = "0.10.8"
time = "0.3.30"

# Dev dependencies are used exclusively when running test or examples
# They do not get included in the final application binary!
[dev-dependencies]
# Sync version for testing purposes
postgres = "0.19.7"
wiremock = "0.5.21"
fake = "2.9.1"
